# opfs-project

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: archive.rs  config.rs  error.rs  fuse.rs  fuse_fs.rs  lib.rs  pack.rs  package_lock.rs  package_manager.rs  project.rs  registry_fs.rs  store.rs  tar_cache.rs  tar_index.rs  util.rs
