[package]
name = "opfs-project"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.96"
serde = { version = "1.0.219", features = ["derive"] }
flate2 = "1.1.2"
tar = "0.4.44"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.22" }
serde_json = "1.0.140"
tokio-fs-ext = "0.3.4"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
