[package]
name = "opfs-project"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A Rust library for working with the Origin Private File System (OPFS) in WebAssembly applications"
repository = "https://github.com/utooland/opfs-project"
homepage = "https://github.com/utooland/opfs-project"
documentation = "https://docs.rs/opfs-project"
keywords = ["wasm", "opfs", "file-system", "browser", "storage"]
categories = ["wasm", "filesystem", "web-programming"]
authors = ["elrrrrrrr <elrrrrrrr@gmail.com>"]
readme = "README.md"
exclude = [".gitignore", ".github/", "target/", "pkg/"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
flate2 = "1.1.2"
tar = "0.4.44"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.22" }
serde_json = "1.0.140"
tokio-fs-ext = "0.6.0"
tracing = "0.1.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = "0.1"
console_error_panic_hook = "0.1"
web-time = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
